<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/fragment_login_text_login"
                android:text="Login"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/store_my_stamp_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/fragment_login_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/account"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_login_text_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_account_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/hint_account"
                android:theme="@style/Widget.Design.TextInputLayout"
                app:boxBackgroundColor="#F8F8F8"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:errorEnabled="true"
                app:errorTextColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_login_account_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_todo_account_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_login_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_login_account_edit_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_password_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:theme="@style/Widget.Design.TextInputLayout"
                app:boxBackgroundColor="#F8F8F8"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:errorEnabled="true"
                app:errorTextColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_login_password_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/fragment_login_button"
                android:hint="登录"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_login_password_edit_layout"/>

            <TextView
                android:id="@+id/fragment_login_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="REGISTER->"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_login_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_login_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>