<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/fragment_add_todo_create_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/create_todo"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_add_todo_title_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fragment_add_todo_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/store_my_stamp_number"
                android:src="@drawable/ic_submit"
                app:layout_constraintBottom_toBottomOf="@id/fragment_add_todo_create_todo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_add_todo_create_todo" />

            <ImageView
                android:id="@+id/fragment_add_todo_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/store_my_stamp_number"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="@id/fragment_add_todo_create_todo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_add_todo_create_todo" />

            <View

                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="#F8F8F8"
                app:layout_constraintBottom_toTopOf="@id/fragment_add_todo_title_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_create_todo" />

            <TextView
                android:id="@+id/fragment_add_todo_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_create_todo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_add_todo_title_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/add_todo_hint1"
                android:theme="@style/Widget.Design.TextInputLayout"
                app:boxBackgroundColor="#F8F8F8"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:errorEnabled="true"
                app:errorTextColor="#F0F0F0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_title_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_add_todo_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_add_todo_content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_title_edit_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_add_todo_content_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:theme="@style/Widget.Design.TextInputLayout"
                app:boxBackgroundColor="#F8F8F8"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:errorEnabled="true"
                app:errorTextColor="#F0F0F0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_content_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_add_todo_content_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_todo_hint2"
                    android:inputType="text"
                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_add_todo_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/store_my_stamp_number"
                android:text="@string/time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_content_edit_layout" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/fragment_add_todo_year"
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_add_todo_hour_layout"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/fragment_add_todo_month"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_time_text" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/fragment_add_todo_month"
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="@id/fragment_add_todo_year"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/fragment_add_todo_year"
                app:layout_constraintRight_toLeftOf="@id/fragment_add_todo_day"
                app:layout_constraintTop_toTopOf="@id/fragment_add_todo_year" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/fragment_add_todo_day"
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_add_todo_hour_layout"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/fragment_add_todo_month"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_time_text" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/fragment_add_todo_time"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_add_todo_hour_layout"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_month" />

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_add_todo_hour_layout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F8F8F8"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_todo_month">

                <watermelon.tobe.view.ClockView
                    android:id="@+id/fragment_add_todo_hour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>